Add style to navbar

--- a/index.html
+++ b/index.html
@@ -11,16 +11,26 @@
 <body>
     <header>
         <nav class="navbar">
-            <h1>The Bible App</h1>
-            <button>Random Verse</button>
+            <h1 class="heading">The Bible App</h1>
+            <button class="ranBtn">Random Verse</button>
         </nav>
     </header>
 
     <main>
-        <div class="display">
-            
+        <div class="random">
+            <h1>Random Verse</h1>
+            <p class="ranVerse"></p>
         </div>
-        <!-- <form action=""></form> -->
+
+        <div class="display">
+
+        </div>
+        <!-- <form action="">
+            <label for="chapter">Chapter Name:</label>
+            <input type="text" id="chapter">
+            <label for="Verse">Verse:</label>
+            <input type="text">
+        </form> -->
 
     </main>
 
