Add random verse functionality

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </nav>
     </header>
 
-    <main>
+    <main class="mt-12 p-6">
         <div class="random">
-            <h1>Random Verse</h1>
+            <h1 class="heading text-black">Random Verse</h1>
             <p class="ranVerse"></p>
         </div>
 
