Add form to search for verse

--- a/index.html
+++ b/index.html
@@ -18,19 +18,31 @@
 
     <main class="mt-12 p-6">
         <div class="random">
-            <h1 class="heading text-black">Random Verse</h1>
+            <h1 class="headingMain">Random Verse</h1>
             <p class="ranVerse"></p>
         </div>
 
-        <div class="display">
-
+        <div class="displaySec">
+            <form action="" class="form">
+                <div class="col">
+                    <label for="book" class="label">Book Name:</label>
+                    <input type="text" id="book" class="input">
+                </div>
+                <div class="col">
+                    <label for="chapter" class="label">Chapter:</label>
+                    <input type="number" id="chapter" class="input">
+                </div>
+                <div class="col">
+                    <label for="verse" class="label">Verse:</label>
+                    <input type="number" id="verse" class="input">
+                </div>
+                <button type="button" class="subBtn">Submit</button>
+            </form>
+    
+            <div class="display">
+    
+            </div>
         </div>
-        <!-- <form action="">
-            <label for="chapter">Chapter Name:</label>
-            <input type="text" id="chapter">
-            <label for="Verse">Verse:</label>
-            <input type="text">
-        </form> -->
 
     </main>
 
