Add functionality to search verse

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <form action="" class="form">
                 <div class="col">
                     <label for="book" class="label">Book Name:</label>
-                    <input type="text" id="book" class="input">
+                    <input type="text" id="book" class="input book">
                 </div>
                 <div class="col">
                     <label for="chapter" class="label">Chapter:</label>
-                    <input type="number" id="chapter" class="input">
+                    <input type="number" id="chapter" class="input chapter">
                 </div>
                 <div class="col">
                     <label for="verse" class="label">Verse:</label>
-                    <input type="number" id="verse" class="input">
+                    <input type="number" id="verse" class="input verse">
                 </div>
                 <button type="button" class="subBtn">Submit</button>
             </form>
